fix : 로그인, 회원가입 기능 수정 중

--- a/src/main/webapp/WEB-INF/views/cart/cart.html
+++ b/src/main/webapp/WEB-INF/views/cart/cart.html
@@ -105,7 +105,7 @@
 
                                 <!-- 아랫줄: 버튼 두 개 -->
                                 <div class="order-buttons-row">
-                                    <button class="wishlist-btn">관심상품</button>
+                                    <button class="wishlist-btn" th:data-item-id="${cartItem.itemId}">관심상품</button>
                                     <button class="order-now-btn">주문하기</button>
                                 </div>
                             </div>
