장바구니 기능 추가

--- a/src/main/webapp/WEB-INF/views/review/review.html
+++ b/src/main/webapp/WEB-INF/views/review/review.html
@@ -57,7 +57,10 @@
                                 <h3 id="detailProductName">상품명</h3>
                                 <div class="product-price-info">
                                     <span id="detailProductPrice">0원</span>
-                                    <button class="product-detail-btn">상품 상세 보기</button>
+                                    <button class="product-detail-btn"
+                                            th:onclick="'location.href=\'/item/' + ${itemId} + '\';'">
+                                        상품 상세 보기
+                                    </button>
                                 </div>
                             </div>
                         </div>
