--- a/src/main/webapp/WEB-INF/views/review/review.html
+++ b/src/main/webapp/WEB-INF/views/review/review.html
@@ -51,16 +51,15 @@
 
                     <!-- 우측 상세정보 -->
                     <div class="review-details">
-                        <div class="product-summary">
-                            <img id="detailProductImage" src="/placeholder.svg?height=80&width=80" alt="상품 이미지" class="detail-product-thumb" />
+                        <div class="product-summary product-navigate" th:data-item-id="${itemId}">
+                        <img id="detailProductImage"
+                                     th:src="@{/placeholder.svg(height=80, width=80)}"
+                                     alt="상품 이미지"
+                                     class="detail-product-thumb" />
                             <div class="product-summary-info">
                                 <h3 id="detailProductName">상품명</h3>
                                 <div class="product-price-info">
                                     <span id="detailProductPrice">0원</span>
-                                    <button class="product-detail-btn"
-                                            th:onclick="'location.href=\'/item/' + ${itemId} + '\';'">
-                                        상품 상세 보기
-                                    </button>
                                 </div>
                             </div>
                         </div>
