--- a/src/main/webapp/resources/css/notice-list.css
+++ b/src/main/webapp/resources/css/notice-list.css
@@ -36,6 +36,16 @@
                 color: black;
                 text-decoration: none;
             }
+            /* 상단 고정 공지사항 스타일 */
+            .pinned-row td {
+                font-weight: bold;
+                color: #000000; /* 빨간 계열 */
+            }
+
+            .pin-icon {
+                margin-right: 5px;
+                color: #000000;
+            }
         }
     }
 }
