feat : ItemQuestion에 상품 검색기능 추가

--- a/src/main/webapp/WEB-INF/views/item/list.html
+++ b/src/main/webapp/WEB-INF/views/item/list.html
@@ -249,7 +249,7 @@
 </div>
 
 <th:block layout:fragment="script">
-    <script th:src="@{/resources/js/category.js}"></script>
+    <script th:src="@{/resources/js/item-list.js}"></script>
 </th:block>
 
 </body>
