chore: 쇼핑몰 이름 수정

--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -7,7 +7,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand" th:href="@{/}">
-            <i class="fas fa-gift"></i> Shopping Mall
+            <i class="fas fa-gift"></i> THANKSRAP
         </a>
 
         <!-- User Menu -->
