--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -32,7 +32,7 @@
 
             <!-- 세션 기반 인증 (User로 로그인 상태가 아닐 시 나타나는 드롭다운 메뉴)-->
             <div class="nav-item" th:if="${session.userId == null}">
-                <a class="nav-link" th:href="@{user/loginForm}">
+                <a class="nav-link" th:href="@{/user/loginForm}">
                     <i class="fas fa-sign-in-alt"></i> 로그인
                 </a>
             </div>
