--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -7,7 +7,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand" th:href="@{/}">
-            <i class="fas fa-gift"></i> THANKSRAP
+            THANKSRAP
         </a>
 
         <!-- User Menu -->
@@ -18,7 +18,8 @@
                     <i class="fas fa-user"></i> <span th:text="${session.email}">사용자</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" th:href="@{/user/mypage}"><i class="fas fa-user-circle"></i> 마이페이지</a></li>
+                    <li><a class="dropdown-item" th:href="@{/user/mypage}"><i class="fas fa-user-circle"></i> 마이페이지</a>
+                    </li>
                     <li><a class="dropdown-item" th:href="@{/orders}"><i class="fas fa-shopping-bag"></i> 주문내역</a></li>
                     <li><a class="dropdown-item" th:href="@{/wishlist}"><i class="fas fa-heart"></i> 관심목록</a></li>
                     <li><a class="dropdown-item" th:href="@{/reviews/my}"><i class="fas fa-star"></i> 내 리뷰</a></li>
@@ -26,7 +27,8 @@
                         <hr class="dropdown-divider">
                     </li>
                     <!-- 수정: /logout -> /user/logout -->
-                    <li><a class="dropdown-item" th:href="@{/user/logout}"><i class="fas fa-sign-out-alt"></i> 로그아웃</a></li>
+                    <li><a class="dropdown-item" th:href="@{/user/logout}"><i class="fas fa-sign-out-alt"></i> 로그아웃</a>
+                    </li>
                 </ul>
             </div>
 
@@ -53,7 +55,8 @@
 
             <!-- Community Dropdown Menu -->
             <div class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="communityDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="communityDropdown" role="button"
+                   data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-comments"></i> 커뮤니티
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="communityDropdown">
